scripts/generator/tests/fixtures/dportsv3/invalid/semantic/invalid-target-combination.dops
target @any,@main
port category/name
mk set VAR "value"
